[package]
name = "teleyt"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frankenstein = { version = "^0.12.0", features = ["async-http-client"] }
futures = "^0.3.21"
redis = "^0.21.5"
tokio = { version = "1", features = ["rt-multi-thread", "process", "macros"] }
tempfile = "^3.3.0"
serde = "^1.0.0"
toml = "^0.5.8"
